fix playground / tutorial-tool on safari

--- a/docs/static/shared/iframeeditor.css
+++ b/docs/static/shared/iframeeditor.css
@@ -40,6 +40,7 @@ body {
     flex-direction: row;
     flex-grow: 1;
     margin: 0.5rem 0.5rem 0;
+    height: 100%;
 }
 
 #container {
